--- a/package.json
+++ b/package.json
@@ -80,21 +80,22 @@
     "@react-native/eslint-config": "^0.73.1",
     "@release-it/conventional-changelog": "^5.0.0",
     "@testing-library/react-native": "^12.8.1",
-    "@types/jest": "^29.5.5",
-    "@types/react": "^18.2.44",
+    "@types/jest": "^29.5.14",
+    "@types/react": "~18.2.79",
     "commitlint": "^17.0.2",
     "del-cli": "^5.1.0",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
+    "jest-expo": "^51.0.4",
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-builder-bob": "^0.30.3",
     "react-test-renderer": "^18.3.1",
     "release-it": "^15.0.0",
-    "typescript": "^5.2.2"
+    "typescript": "~5.3.3"
   },
   "resolutions": {
     "@types/react": "^18.2.44"
@@ -114,7 +115,7 @@
       "<rootDir>/lib/"
     ],
     "transformIgnorePatterns": [
-      "<rootDir>/node_modules/(?!expo-image)"
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
     ]
   },
   "commitlint": {
